[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/Text/start_text.png" type="Texture" id=1]
[ext_resource path="res://menu.gd" type="Script" id=2]
[ext_resource path="res://assets/Sounds/menu_song.wav" type="AudioStream" id=3]

[node name="Menu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 904.0
margin_bottom = 520.0

[node name="Logo" type="TextureRect" parent="VBoxContainer"]
margin_right = 784.0
margin_bottom = 144.0
rect_pivot_offset = Vector2( -723.734, -277.426 )
size_flags_vertical = 3

[node name="Play" type="TextureRect" parent="VBoxContainer"]
margin_top = 148.0
margin_right = 784.0
margin_bottom = 292.0
rect_pivot_offset = Vector2( -723.734, -277.426 )
mouse_default_cursor_shape = 2
size_flags_vertical = 3
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_editor_description_": ""
}

[node name="Exit" type="TextureRect" parent="VBoxContainer"]
margin_top = 296.0
margin_right = 784.0
margin_bottom = 440.0
rect_pivot_offset = Vector2( -723.734, -277.426 )
size_flags_vertical = 3

[node name="MenuSong" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0
[connection signal="gui_input" from="VBoxContainer/Play" to="." method="_on_Play_gui_input"]
[connection signal="finished" from="MenuSong" to="." method="_on_MenuSong_finished"]
